Bug 151060 - PDF Printing showing random black lines on my document.
Summary: PDF Printing showing random black lines on my document.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-09-19 12:48 UTC by Gabriel Scheller
Modified: 2022-10-31 16:28 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
This .rar contains the evidence as pictures (1.21 MB, application/vnd.rar)
2022-09-19 12:48 UTC, Gabriel Scheller
Details
evidence file (docx) (134.27 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-09-21 19:10 UTC, Gabriel Scheller
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriel Scheller 2022-09-19 12:48:52 UTC
Created attachment 182551 [details]
This .rar contains the evidence as pictures

Hello,

I'm facing a problem that happens only on 7.x versions of LibreOffice that generates random blacklines on my document when it's generated as a .pdf file.

On 6.3.x versions of LibreOffice (or any MS Office vers.) it doesn't happen.

We always try to keep the LibreOffice on the latest version on the system that we work with.

If you need any more information about it, please contact me.

gabriel.scheller@neomind.com.br
Comment 1 Telesto 2022-09-21 18:33:50 UTC
Could you please add an example file exhibiting the problem. 

See also: https://wiki.documentfoundation.org/QA/Bugzilla/Sanitizing_Files_Before_Submission
Comment 2 Gabriel Scheller 2022-09-21 19:10:08 UTC
Created attachment 182606 [details]
evidence file (docx)

When you print this file as .pdf on LibreOffice, it shows the random line on the page
Comment 3 Gabriel Scheller 2022-09-21 19:10:31 UTC
(In reply to Telesto from comment #1)
> Could you please add an example file exhibiting the problem. 
> 
> See also:
> https://wiki.documentfoundation.org/QA/Bugzilla/
> Sanitizing_Files_Before_Submission

added, thank you
Comment 4 Telesto 2022-09-21 20:15:33 UTC
Confirm
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 349e3af0c5dd5ed495ed61aab526f63c16f0e215
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded

1. Open the attached file
2. Export to PDF
3. Open the PDF .. page 3 and 4 containing an unexpected line

Same issue is also visible in Print Preview. Press CTRL+P and press arrow right button navigating to page 3/4
Comment 5 Telesto 2022-09-21 20:17:19 UTC
Still OK with
Versie: 6.4.0.2 (x86)
Build ID: 08d19fecdc7a2298d051e19cfdb7c35544855fc3
CPU-threads: 4; Besturingssysteem: Windows 6.3 Build 9600; UI-render: GL; VCL: win; 
Locale: nl-NL (nl_NL); UI-taal: nl-NL
Calc: CL
Comment 6 raal 2022-09-22 17:53:35 UTC
This seems to have begun at the below commit.
Adding Cc: to Miklos Vajna; Could you possibly take a look at this one?
Thanks
 bb0b63f68c1b5bdd70b8bd393fd85b950756ca98 is the first bad commit
commit bb0b63f68c1b5bdd70b8bd393fd85b950756ca98
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Jan 10 17:23:33 2020 +0100

    source c12358166a9bd88fe10feabca45a6ad3f65dff8e

https://git.libreoffice.org/core/+/c12358166a9bd88fe10feabca45a6ad3f65dff8e
Comment 7 Commit Notification 2022-10-11 06:29:52 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bab44a97d21d0ac8a8a06678e71024c1a830943f

tdf#151060 sw PDF export: don't paint off-page part of drawing object

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-10-25 19:09:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/475e698826e2103bdc78ac286e1fc8970363638e

tdf#151060 sw PDF export: don't paint off-page part of drawing object

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.